Archive2/c2/c218a287aa9f8b/output
main.cpp: In function 'int main()':
main.cpp:22:20: error: no matching function for call to 'asdf(main()::<lambda(int)>)'
     asdf([](int) {});
                    ^
main.cpp:22:20: note: candidate is:
main.cpp:7:6: note: template<class Func, class> void asdf(Func)
 void asdf(Func doThing) {
      ^
main.cpp:7:6: note:   template argument deduction/substitution failed:
main.cpp:6:25: error: no type named 'type' in 'class std::result_of<main()::<lambda(int)>()>'
 template<typename Func, typename = typename std::result_of<Func()>::type>
                         ^
1
